This file only list changes to game code.  Changes to content can be found here:

http://onehouronelife.com/updateLog.php




Server Fixes

--Fixed crash when someone right-clicks a full basket on a table.

--Fixed glitch where you get stuck unable to satisfy a craving if the craved
  item has a YUM parent (example:  bowl of gooseberries).  Fixes #641

--Fitness server admin interface now has links to other players on details page.

--Two bugs in genetic fitness tracking.  First, if your mother is childless,
  she was being considered as your aunt in the ancestor tracking.  Second, if
  an email has a wayward backslash character (which the client should forbid,
  but does not), it breaks the SQL statement, preventing fitness from being
  logged.  Both issues were causing lives to be ignored or mis-recorded by the
  fitness server.  Fixes #642.  Fixes #643.




Version 344   2020-June-26

--Cravings implemented.

--Can use a tool on objects in certain specially-marked (+useOnContained)
  containers.  For example, can use a knife to slice a loaf of bread that is
  sitting on a table.  Before, you had to remove the bread from the table to
  slice it, and then put it back on the table.

--Hunger slips now account for stored YUM bonus, so they don't show hungry or
  starving, when you're actually not due to your bonus.

--Fixed glitch in lingering eating state after eating a food that leaves
  nothing in your hand.

--Support for emote decay sounds, so that satisfaction sound can play at the
  end of satisfied emote and not overlap with food's custom chewing sound.




Server Fixes

--Fixed family tree server to accept longer last words.

--Fixed bug that caused Eve spawn to jump to the west of a donkeytown homeland.
  Fixes #633.

--New method for putting Eve to west of homelands.  Completely ignore any
  d-town or tutorial homelands, and compute the average location of the rest.
  Place Eve to the west of the furthest-west homeland that is not > 1500 to the