@@ -3,6 +3,10 @@ This file only list changes to game code.  Changes to content can be found here:
 http://onehouronelife.com/updateLog.php
 
 
+Version 346   ???
+
+--Forbid backslash and quotes in login email address in client.
+
 
 
 Server Fixes
